@startuml StudyConnect Class Diagram

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor #F8F9FA
skinparam classBorderColor #DEE2E6
skinparam arrowColor #495057
skinparam packageBackgroundColor #FFFFFF

package "User Management" {
  class User {
    +id: UUID
    +firstName: String
    +lastName: String
    +email: String
    +password: String
    +role: Enum
    +avatar: String
    +bio: Text
    +institution: String
    +major: String
    +yearOfStudy: String
    +emailVerified: Boolean
    +isActive: Boolean
    +lastLogin: Date
    +createdAt: Date
    +updatedAt: Date
    +matchPassword(password): Boolean
    +getSignedJwtToken(): String
  }

  class UserPreference {
    +id: UUID
    +userId: UUID
    +theme: String
    +notifications: Boolean
    +emailNotifications: Boolean
    +soundEffects: Boolean
    +createdAt: Date
    +updatedAt: Date
  }

  class UserPresence {
    +id: UUID
    +userId: UUID
    +status: String
    +lastActive: Date
    +device: String
    +createdAt: Date
    +updatedAt: Date
  }
}

package "Study Rooms" {
  class StudyRoom {
    +id: UUID
    +name: String
    +description: Text
    +image: String
    +totalMembers: Integer
    +activeMembers: Integer
    +lastActive: Date
    +isActive: Boolean
    +createdBy: UUID
    +subjectId: UUID
    +createdAt: Date
    +updatedAt: Date
  }

  class UserStudyRoom {
    +id: UUID
    +userId: UUID
    +roomId: UUID
    +role: String
    +joinedAt: Date
    +lastActive: Date
    +createdAt: Date
    +updatedAt: Date
  }

  class Subject {
    +id: UUID
    +name: String
    +description: Text
    +icon: String
    +createdAt: Date
    +updatedAt: Date
  }

  class UserSubject {
    +id: UUID
    +userId: UUID
    +subjectId: UUID
    +proficiency: Integer
    +isTeaching: Boolean
    +createdAt: Date
    +updatedAt: Date
  }
}

package "Communication" {
  class Message {
    +id: UUID
    +roomId: UUID
    +senderId: UUID
    +content: Text
    +type: String
    +timestamp: Date
    +isSystem: Boolean
    +createdAt: Date
    +updatedAt: Date
  }

  class DirectMessage {
    +id: UUID
    +senderId: UUID
    +receiverId: UUID
    +content: Text
    +isRead: Boolean
    +timestamp: Date
    +createdAt: Date
    +updatedAt: Date
  }
}

package "Resources" {
  class Resource {
    +id: UUID
    +title: String
    +description: Text
    +type: String
    +url: String
    +fileSize: Integer
    +uploadedBy: UUID
    +roomId: UUID
    +subjectId: UUID
    +isPublic: Boolean
    +createdAt: Date
    +updatedAt: Date
  }
}

package "Social" {
  class Friendship {
    +id: UUID
    +senderId: UUID
    +receiverId: UUID
    +status: String
    +createdAt: Date
    +updatedAt: Date
  }

  class Notification {
    +id: UUID
    +userId: UUID
    +type: String
    +content: Text
    +isRead: Boolean
    +relatedId: UUID
    +createdAt: Date
    +updatedAt: Date
  }
}

package "Learning Tools" {
  class Event {
    +id: UUID
    +title: String
    +description: Text
    +startTime: Date
    +endTime: Date
    +roomId: UUID
    +createdBy: UUID
    +isPublic: Boolean
    +createdAt: Date
    +updatedAt: Date
  }

  class UserEvent {
    +id: UUID
    +userId: UUID
    +eventId: UUID
    +status: String
    +createdAt: Date
    +updatedAt: Date
  }
}

' Relationships
User "1" -- "1" UserPreference : has
User "1" -- "1" UserPresence : has
User "1" -- "*" UserSubject : has
User "1" -- "*" StudyRoom : creates
User "*" -- "*" StudyRoom : joins
StudyRoom "*" -- "1" Subject : belongs to
User "1" -- "*" Message : sends
User "1" -- "*" Resource : uploads
User "1" -- "*" Event : creates
User "*" -- "*" Event : participates
User "1" -- "*" DirectMessage : sends
User "1" -- "*" Notification : receives
User "1" -- "*" Friendship : initiates
User "1" -- "*" Friendship : receives

@enduml 